app/assets/stylesheets/officers.scss
@import "sitewide_partials";

#officer_sign_in {
  position:absolute;
  top:20px;
  right:30px;
}

#sign_in_form {
  width:100%;
  
  form div {
    width:49%;
    
    &#password_field {
      top:0;
      right:0;
      position:absolute;
    }
  }
}

div#officer_display {
  width:100%;
  
  div#officer_image {
    width:49%;
    
    img {
      height:100%;
      max-height:500px;
      width:auto;
    }
  }
  
  div#officer_info_container {
    width:49%;
    position:absolute;
    right:0;
    top:0;
    
    div#officer_info {
      width:100%;
      padding:0 20px;
      
      span#officer_position {
        margin-left:13px;
        font-size:14px;
        font-weight:lighter;
        font-style:italic;
      }
    }
  }
}

div.officer_card {
  display:inline-block;
  vertical-align:middle;
  padding:20px;
  max-width:200px;
  background-color:#FFF;
  
  @include transitions(500ms);
  
  &:hover {
    background-color:#FFC;
  }
  
  img {
    margin-bottom:15px;
    height:75%;
    
    &:hover {
      box-shadow:0px 3px 7px #555;
    }
  }
  
  span.officer_info {
    display:block;
    text-align:center;
  }
}

